@@ -17,6 +17,7 @@ import su.nightexpress.nightcore.util.NumberUtil;
 import su.nightexpress.nightcore.util.time.TimeFormats;
 
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.function.BiFunction;
 
@@ -121,7 +122,8 @@ public class PlaceholderHook {
         @Override
         @NotNull
         public String getAuthor() {
-            return this.plugin.getDescription().getAuthors().getFirst();
+            List<String> authors = this.plugin.getDescription().getAuthors();
+            return authors.isEmpty() ? "Unknown" : authors.get(0);
         }
 
         @Override
